@@ -10,9 +10,11 @@
     <changelog>
         <![CDATA[
         <p>Changes in 4.8.1<br/>
+        [BEAM-1192] Title in histogram does not adjust to current band<br/>
         [BEAM-1194] Open RGB in image view leads to "Unknown band:" error<br/>        
         [BEAM-1184] Reprojection dialog does not remember values<br/>
         [BEAM-1183] Improve reprojection UI usability<br/>
+        [BEAM-1067] Histogram title doesn't update when changing band<br/>
         </p>
         <p>Changes in 4.8<br/>
         [BEAM-1159] Auto-group bands according to their names<br/>
