@@ -12,10 +12,12 @@
     <changelog>
         <![CDATA[
         <p>Changes in 4.8.1<br/>
+          [BEAM-1192] Title in histogram does not adjust to current band<br/>
           [BEAM-1194] Open RGB in image view leads to "Unknown band:" error<br/>        
           [BEAM-1184] Reprojection dialog does not remember values<br/>
           [BEAM-1183] Improve reprojection UI usability<br/>
           [BEAM-1177] Index out of bounds for RGB View<br/>
+          [BEAM-1067] Histogram title doesn't update when changing band<br/>
         </p>
         <p>Changes in 4.8:<br/>
           [BEAM-1169] On KDE (linux) the Java Desktop-API is not supported.<br/>
